fix the services vertical alignement

--- a/css/partials/sections/_services.scss
+++ b/css/partials/sections/_services.scss
@@ -13,7 +13,8 @@
     .srv {
         display: flex;
         gap: 20px;
-        margin-bottom: 40px;
+        height: 50%;
+        margin-bottom: 20px;
         @include breakpoints(mobile) {
             flex-direction: column;
             text-align: center;
