--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,8 @@ ul {
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
-  margin-bottom: 40px;
+  height: 50%;
+  margin-bottom: 20px;
 }
 @media (max-width: 767px) {
   .services .srv {
